--- a/pie.html
+++ b/pie.html
@@ -92,6 +92,13 @@
         </ul>
         <footer>
             <ul class=noneli>
+                <h2>
+ <a href="http://validator.w3.org/check?uri=referer"
+ onclick="this.href='http://validator.w3.org/check?uri=' + 
+ document.URL"><img
+ src="http://www.w3.org/Icons/valid-xhtml10"
+ alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+ </h2>
                 <li><a href="validate-html.php"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
                             alt="html validator" /></a>
                     <a href="validate-css.php"> <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png"
