--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,13 @@
                 <li>Nashyla - <i>She had never eaten onion</i></li>
             </ul>
         </div>
+            <h2>
+ <a href="http://validator.w3.org/check?uri=referer"
+ onclick="this.href='http://validator.w3.org/check?uri=' + 
+ document.URL"><img
+ src="http://www.w3.org/Icons/valid-xhtml10"
+ alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+ </h2>
         <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
         <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css validator"/></a>
         
