--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
                     <Address>1000 N 4th St. Fairfield, IOWA, 52557 </Address>
                     <address>Email: lmesfin@miu.edu</address>     
                 </p>
-                <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+                <h2>
+                    <a href="http://validator.w3.org/check?uri=referer"
+                    onclick="this.href='http://validator.w3.org/check?uri=' + 
+                    document.URL"><img
+                    src="http://www.w3.org/Icons/valid-xhtml10"
+                    alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+                    </h2>
             </footer>
     </body>
     
