--- a/pie.html
+++ b/pie.html
@@ -93,13 +93,10 @@
         <footer>
             <ul class=noneli>
                 <h2>
- <a href="http://validator.w3.org/check?uri=referer"
- onclick="this.href='http://validator.w3.org/check?uri=' + 
- document.URL"><img
- src="http://www.w3.org/Icons/valid-xhtml10"
- alt="Valid XHTML 1.0!" height="31" width="88" /></a>
- </h2>
-                
+                    <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
+ document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+                </h2>
+
                 <li>Copyright &copy; 2012 Granny's Pies |</li>
                 <li>A Granny's Pies Production |</li>
                 <li>All rights reserved |</li>
