--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">lab1 - Homepage</a></li>
                     <li><a href="aboutme.html">lab2 - About me</a></li>
-                    <li><a href="recipe.html">lab3 - Recipe</a></li>
+                    <li><a href="pie.html">lab3 - Recipe</a></li>
                     <li><a href="">lab4 - Movie Review</a></li>
                     <li><a href="">lab5</a></li>
                     <li><a href="">lab6</a></li>
