--- a/pie.html
+++ b/pie.html
@@ -1,106 +1,45 @@
 <html>
-
-<head>
-    <link rel="stylesheet" href="recipe.css">
-</head>
-
-<body class=bodyRecipe>
-    <div class=containerRecipe>
-        <div>
-            <h2 class="heading">Grandma's Lemon Meringue Pie</h2>
+    <head>
+        <link rel="stylesheet" href="myCss.css">
+        <link href="aboutme.html">
+    </head>
+    <body >
+        <div class=imgMe>
+            <img class= img src=1.jpeg width="200" height="240">
         </div>
-        <img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="lemon meringue pie">
-        <ul class=noneli>
-            <li>One 9-inch pie</li>
-            <li>30 Min - Prep time</li>
-            <li>10 Min - Cook time</li>
-            <li>40 Min - Total</li>
-            <li>8 Servings</li>
-        </ul>
-        <hr>
-        <h2 class="headings">INGREDIENTS</h2>
-        <ul class=list>
-            <li>1 cup white sugar</li>
-            <li>2 <abbr title="Tablespoons">tbsp</abbr> all-purpose flour</li>
-            <li>3 <abbr title="Teaspoons">tsp</abbr> cornstarch</li>
-            <li>1/4 <abbr title="Teaspoons">tsp</abbr> salt</li>
-            <li>1 1/2 cups water</li>
-            <li>2 lemons, juiced and zested</li>
-            <li>2 <abbr title="Tablespoons">tbsp</abbr> butter</li>
-            <li>4 egg yolks, beaten</li>
-            <li>1 (9 inch) pie crust, baked</li>
-            <li>4 egg whites</li>
-            <li>6 <abbr title="Tablespoons">tbsp</abbr> white sugar</li>
-        </ul>
-        <hr>
-        <h2 class="headings">DIRECTIONS</h2>
-        <ol>
-            <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
-            <li><b>Make Lemon Filling:</b> In a medium saucepan ...</li>
-            <ul class=list>
-                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-                <li>Stir in water, lemon juice and lemon zest.</li>
-                <li> Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-                <li>Stir in butter.</li>
-                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-                <li>Remove from heat.</li>
-                <li>Pour filling into baked pastry shell.</li>
-
-            </ul>
-            <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
-            <ul class=list>
-                <li>Whip egg whites until foamy.</li>
-                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-                <li>Spread meringue over pie, sealing the edges at the crust.</li>
-            </ul>
-            <li><b>Bake: </b>Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
-        </ol>
-        <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years.
-            It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a
-            piece of <del>cake</del> pie!</p>
-        <hr>
-        <h2 class="headings">USER COMMENTS</h2>
-        <blockquote>
-            This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with
-            cornstarch and flour in addition to egg yolks, and contains no milk.<br><br>
-
-            - Emilie S.
-        </blockquote>
-        <blockquote>
-            Q: What do you call an ape who loves pie?<br>
-            A: A meringue-utan.<br><br>
-
-            - Vickie K.
-        </blockquote>
-        <blockquote>
-            This site can really <b>engage</b> my interest. Follow the recipe above and <b>make it so!</b> This pie is
-            <b>number
-                one.</b><br><br>
-
-            - Jean-Luc Piecard
-        </blockquote>
-        <hr>
-
-        <h2 class="headings">LINKS</h2>
-
-        <ul class=noneli>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon
-                    meringue pie recipes</a></li>
-        </ul>
-        <footer>
-            <ul class=noneli>
-                <h2>
-                    <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
+            <br>
+            <div class=body>
+            <h1>
+                Lidia Mekonnen, Mesfin
+            </h1>
+            <h3>
+                <ul>
+                    <li><a href="index.html">lab1 - Homepage</a></li>
+                    <li><a href="aboutme.html">lab2 - About me</a></li>
+                    <li><a href="pie.html">lab3 - Recipe</a></li>
+                    <li><a href="">lab4 - Movie Review</a></li>
+                    <li><a href="">lab5</a></li>
+                    <li><a href="">lab6</a></li>
+                    <li><a href="">lab7</a></li>
+                    <li><a href="">lab8</a></li>
+                    <li><a href="">lab9</a></li>
+                    <li><a href="">lab10</a></li>
+                    <li><a href="">Final Project</a></li>
+                  </ul>
+            </h3>  
+        </div>
+            <footer>
+                <b>&copy;Lidia Mekonnen, Mesfin</b>
+                <p>
+                    Maharishi University  
+                    <Address>1000 N 4th St. Fairfield, IOWA, 52557 </Address>
+                    <address>Email: lmesfin@miu.edu</address>     
+                </p>
+                h2>
+            <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
  document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-                </h2>
-
-                <li>Copyright &copy; 2012 Granny's Pies |</li>
-                <li>A Granny's Pies Production |</li>
-                <li>All rights reserved |</li>
-            </ul>
-        </footer>
-
-    </div>
+        </h2>
+            </footer>
+    </body>
+    
+</html>
