--- a/pie.html
+++ b/pie.html
@@ -9,7 +9,7 @@
         <div>
             <h2 class="heading">Grandma's Lemon Meringue Pie</h2>
         </div>
-        <img src="http://mumstudents.org/cs472/2014-09/Homework/1/pie.jpg" alt="lemon meringue pie">
+        <img src="images/pie.jpg" alt="lemon meringue pie">
         <ul class=noneli>
             <li>One 9-inch pie</li>
             <li>30 Min - Prep time</li>
