--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 <body>
     <div class="aboutme">
-        <h1><a href="index.html"><img class="logo" src=logo.jpeg width="40" height="60"></a>About Lidia Mekonnen</h1>
+        <h1><a href="index.html"><img class="logo" src=logo.jpeg alt="logo" width="40" height="60"></a>About Lidia Mekonnen</h1>
         <p>I am lidia, I am from Eritrea and i love to read books.</p>
         <hr>
         <h2>List of Classes in MIU</h2>
@@ -30,9 +30,9 @@
             My Moods
         </h2>
         <div class=card>
-            <img src="img4.jpeg" width="200" height="200">
+            <img src="img4.jpeg" alt="hope"width="200" height="200">
             <p>Thinking</p>
-            <img src="img5.jpeg" width="200" height="200">
+            <img src="img5.jpeg" alt="happy"width="200" height="200">
             <p>Hopeful</p>
         </div><br>
         <div class=fact>
