--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body >
         <div class=imgMe>
-            <img class= img src=1.jpeg width="200" height="240">
+            <img class= img src=1.jpeg alt="myPhoto"width="200" height="240">
         </div>
             <br>
             <div class=body>
