--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html>
-    <head>
+<head>
+<title>Homepage</title>
+
         <link rel="stylesheet" href="myCss.css">
-        <link href="aboutme.html">
+        <link href="aboutme.html" rel="htmlPage">
     </head>
     <body >
         <div class=imgMe>
-            <img class= img src=1.jpeg alt="myPhoto"width="200" height="240">
+            <img class= img src=1.jpeg alt="myPhoto" width="200" height="240">
         </div>
             <br>
             <div class=body>
             <h1>
                 Lidia Mekonnen, Mesfin
             </h1>
-            <h3>
+          
                 <ul>
                     <li><a href="index.html">lab1 - Homepage</a></li>
                     <li><a href="aboutme.html">lab2 - About me</a></li>
@@ -26,7 +29,7 @@
                     <li><a href="">lab10</a></li>
                     <li><a href="">Final Project</a></li>
                   </ul>
-            </h3>  
+          
         </div>
             <footer>
                 <b>&copy;Lidia Mekonnen, Mesfin</b>
