--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
-<html>
-
+<!DOCTYPE html lang="en">
 <head>
+<title>AboutMe</title>
     <link rel="stylesheet" href="aboutme.css">
 </head>
 
@@ -30,9 +30,9 @@
             My Moods
         </h2>
         <div class=card>
-            <img src="img4.jpeg" alt="hope"width="200" height="200">
+            <img src="img4.jpeg" alt="hope" width="200" height="200">
             <p>Thinking</p>
-            <img src="img5.jpeg" alt="happy"width="200" height="200">
+            <img src="img5.jpeg" alt="happy" width="200" height="200">
             <p>Hopeful</p>
         </div><br>
         <div class=fact>
