--- a/pie.html
+++ b/pie.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html lang="en">
 <html>
+
 <head>
-<title>RecipeHtml</title>
+    <title>RecipeHtml</title>
     <link rel="stylesheet" href="recipe.css">
 </head>
 
@@ -93,11 +94,12 @@
         </ul>
         <footer>
             <ul class=noneli>
-               
-                    <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
- document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-                
 
+                <li><a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
+                        document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!"
+                            height="31" width="88" /></a>
+
+                </li>
                 <li>Copyright &copy; 2012 Granny's Pies |</li>
                 <li>A Granny's Pies Production |</li>
                 <li>All rights reserved |</li>
