--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>AboutMe</title>
     <link rel="stylesheet" href="aboutme.css">
