--- a/pie.html
+++ b/pie.html
@@ -39,16 +39,16 @@
         <ol>
             <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
             <li><b>Make Lemon Filling:</b> In a medium saucepan ...</li>
-            <ul class=list>
-                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-                <li>Stir in water, lemon juice and lemon zest.</li>
-                <li> Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-                <li>Stir in butter.</li>
-                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-                <li>Remove from heat.</li>
-                <li>Pour filling into baked pastry shell.</li>
+            <dl class=list>
+                <dd>Whisk together 1 cup sugar, flour, cornstarch, and salt.</dd>
+                <dd>Stir in water, lemon juice and lemon zest.</dd>
+                <dd> Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</dd>
+                <dd>Stir in butter.</dd>
+                <dd>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</dd>
+                <dd>Whisk egg yolk mixture back into remaining sugar mixture.</dd>
+                <dd>Bring to a boil and continue to cook while stirring constantly until thick.</dd>
+                <dd>Remove from heat.</dd>
+                <dd>dd>Pour filling into baked pastry shell.</dd>
 
             </ul>
             <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
