--- a/pie.html
+++ b/pie.html
@@ -38,7 +38,8 @@
         <h2 class="headings">DIRECTIONS</h2>
         <ol>
             <li><b>Preheat Oven:</b> Preheat oven to 350 degrees F (175 degrees C).</li>
-            <li><b>Make Lemon Filling:</b> In a medium saucepan ...</li>
+            <li><b>Make Lemon Filling:</b> In a medium saucepan ...
+
             <dl class=list>
                 <dd>Whisk together 1 cup sugar, flour, cornstarch, and salt.</dd>
                 <dd>Stir in water, lemon juice and lemon zest.</dd>
@@ -48,9 +49,9 @@
                 <dd>Whisk egg yolk mixture back into remaining sugar mixture.</dd>
                 <dd>Bring to a boil and continue to cook while stirring constantly until thick.</dd>
                 <dd>Remove from heat.</dd>
-                <dd>dd>Pour filling into baked pastry shell.</dd>
+                <dd>Pour filling into baked pastry shell.</dd>
 
-            </dl>
+            </dl></li>
             <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
             <ul class=list>
                 <li>Whip egg whites until foamy.</li>
