--- a/pie.html
+++ b/pie.html
@@ -52,12 +52,12 @@
                 <dd>Pour filling into baked pastry shell.</dd>
 
             </dl></li>
-            <li><b>Make Meringue:</b> In a large glass or metal bowl ...</li>
-            <ul class=list>
-                <li>Whip egg whites until foamy.</li>
-                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-                <li>Spread meringue over pie, sealing the edges at the crust.</li>
-            </ul>
+            <li><b>Make Meringue:</b> In a large glass or metal bowl ...
+            <dl class=list>
+                <dd>Whip egg whites until foamy.</dd>
+                <dd>Add sugar gradually, and continue to whip until stiff peaks form.</dd>
+                <dd>Spread meringue over pie, sealing the edges at the crust.</dd>
+            </li>
             <li><b>Bake: </b>Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
         </ol>
         <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years.
