--- a/pie.html
+++ b/pie.html
@@ -11,7 +11,7 @@
         <div>
             <h2 class="heading">Grandma's Lemon Meringue Pie</h2>
         </div>
-        <img src="images/pie.jpg" alt="lemon meringue pie">
+        <img src="pieIMG/pie.jpg" alt="lemon meringue pie">
         <ul class=noneli>
             <li>One 9-inch pie</li>
             <li>30 Min - Prep time</li>
