--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class=imgMe>
-        <img class=img src=1.jpeg alt="myPhoto" width="200" height="240">
+        <img class=img src="homeIMG/1.jpeg" alt="myPhoto" width="200" height="240">
     </div>
     <br>
     <div class=body>
