--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="index.html">lab1 - Homepage</a></li>
             <li><a href="aboutme.html">lab2 - About me</a></li>
             <li><a href="pie.html">lab3 - Recipe</a></li>
-            <li><a href="">lab4 - Movie Review</a></li>
+            <li><a href="tmnt.html">lab4 - Movie Review</a></li>
             <li><a href="">lab5</a></li>
             <li><a href="">lab6</a></li>
             <li><a href="">lab7</a></li>
