--- a/tmnt.html
+++ b/tmnt.html
@@ -13,9 +13,7 @@
             TMNT (2007)
         </div>
         <div class="content">
-            <div class=title>
-                <img src="movieIMG/rottenbig.png" alt=rotten>33%
-            </div>
+                <img  src="movieIMG/rottenbig.png" alt=rotten><h1 class="title">33%</h1>
             <div class="desc">
                 <img src="movieIMG/overview.png" alt=overview>
                 <dl class=def>
@@ -102,7 +100,7 @@
                 </div>
                 <div class="review">
                     <img src="movieIMG/rotten.gif" alt=critic>
-                    <q>YOUR REVIEW HERE</q>
+                    <q>YOUR REVIEW HERE<br></q>
                 </div>
 
                 <div class="comments">
