--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="aboutme.html">lab2 - About me</a></li>
             <li><a href="pie.html">lab3 - Recipe</a></li>
             <li><a href="tmnt.html">lab4 - Movie Review</a></li>
-            <li><a href="">lab5</a></li>
+            <li><a href="form.html">lab5 - Grades Exercise</a></li>
             <li><a href="">lab6</a></li>
             <li><a href="">lab7</a></li>
             <li><a href="">lab8</a></li>
