--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="pie.html">lab3 - Recipe</a></li>
             <li><a href="tmnt.html">lab4 - Movie Review</a></li>
             <li><a href="form.html">lab5 - Grades Exercise</a></li>
-            <li><a href="">lab6</a></li>
+            <li><a href="signup.html">lab6 - NurdLuv</a></li>
             <li><a href="">lab7</a></li>
             <li><a href="">lab8</a></li>
             <li><a href="">lab9</a></li>
