--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class=heading>
-        <span style="color:grey">nerd</span><span style="color:blue">Luv<sup>tm</sup></span><br>
+        <span style="color:grey"><b>nerd</b></span><span style="color:blue">Luv<sup>tm</sup></span><br>
         where meek geeks meet
     </div>
     <div>
@@ -28,7 +28,8 @@
 
             <label class=label>Personality Type:</label>
             <input type=text name=typeP minlength="4" maxlength="4" size="6">
-            <a href="http://www.humanmetrics.com/cgi-win/JTypes2.asp">(Dont't Know your Type?)</a><br><br>
+            (
+            <a href="http://www.humanmetrics.com/cgi-win/JTypes2.asp">Dont't Know your Type?</a>)<br><br>
 
             <label class=label>Favorite OS:</label>
             <select name=OS>
