--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <li><a href="tmnt.html">lab4 - Movie Review</a></li>
             <li><a href="form.html">lab5 - Grades Exercise</a></li>
             <li><a href="signup.html">lab6 - NurdLuv</a></li>
-            <li><a href="">lab7</a></li>
+            <li><a href="click.html">lab7 - onClick Alert</a></li>
+            <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
             <li><a href="">lab8</a></li>
             <li><a href="">lab9</a></li>
             <li><a href="">lab10</a></li>
@@ -40,8 +41,12 @@
         <address>Email: lmesfin@miu.edu</address>
 
         <h2>
-            <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
- document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+            <a href="https://webster.cs.washington.edu/validate-html.php">
+				<img src="http://www.cs.washington.edu/education/courses/cse190m/12su/homework/4/images/w3c-html5.png" alt="Valid HTML" />
+			</a>
+			<a href="https://webster.cs.washington.edu/validate-css.php">
+				<img src="http://www.cs.washington.edu/education/courses/cse190m/12su/homework/4/images/w3c-css.png" alt="Valid CSS" />
+			</a>
         </h2>
     </footer>
 </body>
