--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>nurdLuv</title>
     <link href="form.css" rel=stylesheet>
 </head>
 
@@ -24,10 +24,10 @@
             <label>Male</label><br><br>
 
             <label class=label>Age:</label>
-            <input type="number" name=age min="1" max="99" size="6"><br><br>
+            <input type="number" name=age min="1" max="99"><br><br>
 
             <label class=label>Personality Type:</label>
-            <input type=text name=typeP minlength="4" maxlength="4" size="6">
+            <input type=text name=typeP minlength="4" maxlength="4">
             (
             <a href="http://www.humanmetrics.com/cgi-win/JTypes2.asp">Dont't Know your Type?</a>)<br><br>
 
@@ -38,9 +38,12 @@
                 <option>LINUX</option>
             </select><br><br>
 
-            <label class=label class=label>Seeking Age:<label>
-                    <input type=text name=min placeholder="min">to<input name=max type=text placeholder="max"><br>
-                    <input type=submit value="Sign Up">
+            <label class=label>Seeking Age:</label>
+            <input type=text name=min placeholder="min">to
+
+            <input name=max type=text placeholder="max">
+
+            <input type=submit value="Sign Up">
         </form>
     </div>
     <footer>
