--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
         <address>Email: lmesfin@miu.edu</address>
 
         <h2>
-            <a href="https://webster.cs.washington.edu/validate-html.php">
-				<img src="http://www.cs.washington.edu/education/courses/cse190m/12su/homework/4/images/w3c-html5.png" alt="Valid HTML" />
-			</a>
-			<a href="https://webster.cs.washington.edu/validate-css.php">
-				<img src="http://www.cs.washington.edu/education/courses/cse190m/12su/homework/4/images/w3c-css.png" alt="Valid CSS" />
-			</a>
+            <a href="http://validator.w3.org/check?uri=referer"
+                onclick="this.href='http://validator.w3.org/check?uri=' + document.URL">
+                <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
         </h2>
     </footer>
 </body>
