--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>nurdLuv</title>
@@ -54,8 +54,8 @@
 
         <p>Results and page (C) copyright NurdLuv Inc</p>
 
-        <a href=""><img class="img" src="left.jpg"> Back to front page</a><br><br>
-        <div>
+        <a href=""><img class="img" src="left.jpg" alt=arrow-left> Back to front page</a><br><br>
+        
             <a href="http://validator.w3.org/check?uri=referer"
                 onclick="this.href='http://validator.w3.org/check?uri=' + document.URL">
                 <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
