--- a/click.html
+++ b/click.html
@@ -3,12 +3,28 @@
 <head>
 <title>Homepage</title>
 <script>
-    function gogogo() {
+    function myfun() {
         alert("You Clicked Me");
     }
+    function gogogo() {
+        alert("Yay, it works!");
+    }
+    function somethingElse() {
+        if (5 > 2) {
+            alert("Bigger");
+        if (5 < 2) {
+            alert("Smaller");
+        }
+    }
+}
     </script>
 </head>
 <body>
-    <button onclick="gogogo()">Click Me</button>
+    <button onclick="gogogo()">Try it</button>
+    <button onclick="somethingElse()"><p>5>2</p></button>
+    <button onclick="myfun()">Click Me</button>
     </body>
 </html>
+
+    
+    
