--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="tmnt.html">lab4 - Movie Review</a></li>
             <li><a href="form.html">lab5 - Grades Exercise</a></li>
             <li><a href="signup.html">lab6 - NurdLuv</a></li>
-            <li><a href="click.html">lab7 - onClick Alert</a></li>
+            <li><a href="click.html">lab7 - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
             <li><a href="">lab8</a></li>
             <li><a href="">lab9</a></li>
