--- a/click.html
+++ b/click.html
@@ -20,9 +20,9 @@
     </script>
 </head>
 <body>
-    <button onclick="gogogo()">Try it</button>
-    <button onclick="somethingElse()"><p>5>2</p></button>
-    <button onclick="myfun()">Click Me</button>
+    <button onclick="gogogo()">Try it</button><br>
+    <button onclick="somethingElse()"><p>5>2</p></button><br>
+    <button onclick="myfun()">Click Me</button><br>
     </body>
 </html>
 
