--- a/click.html
+++ b/click.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <button onclick="gogogo()">Try it</button><br><br>
-    <button onclick="somethingElse()"><p>5>2</p></button><br><br>
+    <button onclick="somethingElse()">5>2</button><br><br>
     <button onclick="myfun()">Click Me</button><br><br>
     </body>
 </html>
