--- a/aboutme.html
+++ b/aboutme.html
@@ -44,8 +44,11 @@
             </ul>
         </div>
         <h2>
-            <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
- document.URL"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+            <div>
+                <a href="http://validator.w3.org/check/referer"><img src="http://mumstudents.org/cs472/2021-09-BL/images/w3c-html.png" alt="Valid HTML5"></a>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://mumstudents.org/cs472/2021-09-BL/images/w3c-html.png" alt="Valid CSS"></a>
+                <!-- <a href="http://mumstudents.org/jshint/referer"><img src="http://mumstudents.org/jshint/jshint-small.png" alt="Valid JS"></a> -->
+              </div>
         </h2>
 
 
