--- a/calculator.html
+++ b/calculator.html
@@ -18,14 +18,14 @@ function calcTip() {
 </script>
 	<head>
 		<title>Tip Calculator</title>
-		<link href="tip.css" type="text/css" rel="stylesheet" />
+		<link href="calculator.css" type="text/css" rel="stylesheet" />
 		<!-- <script src="tip.js" type="text/javascript"></script> -->
 	</head>
 
 
 	<body>
 		<h1>
-			<img id="logo" src="calc.jpg" alt="++--**//" />
+			<img id="logo" src="http://mumstudents.org/cs472/2019-05-BL/Lectures/js10/calc.jpg" alt="++--**//" />
 			  Tip Calculator
 		</h1>
 
