--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
         </div>
         <h2>
             <div>
-                <a href="http://validator.w3.org/check/https://?uri=lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
+                <a href="https://validator.w3.org/?uri=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
                 <a href="http://jigsaw.w3.org/css-validator/check/?doc=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="/resources/images/w3c-css.png" alt="Valid CSS"></a>
                 <!-- <a href="http://mumstudents.org/jshint/referer"><img src="http://mumstudents.org/jshint/jshint-small.png" alt="Valid JS"></a> -->
               </div>
