--- a/calculator.html
+++ b/calculator.html
@@ -25,7 +25,7 @@ function calcTip() {
 
 	<body>
 		<h1>
-			<img id="logo" src="http://mumstudents.org/cs472/2019-05-BL/Lectures/js10/calc.jpg" alt="++--**//" />
+			<img id="logo" src="http://mumstudents.org/cs472/2019-05-BL/Lectures/js10/calc.jpg" alt="calcTip" />
 			  Tip Calculator
 		</h1>
 
