--- a/tmnt.html
+++ b/tmnt.html
@@ -173,8 +173,8 @@
                 (1-10) of 88
             </div>
         </div>
-        <a class="w3" href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + document.URL">
-            <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="/resources/images/w3c-css.png" alt="Valid CSS"></a>
     </div>
 </body>
 
