--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <Address>1000 N 4th St. Fairfield, IOWA, 52557 </Address>
         <address>Email: lmesfin@miu.edu</address>
 
-        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
-                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="/resources/images/w3c-css.png" alt="Valid CSS"></a>
+        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="w3c-css.png" alt="Valid CSS"></a>
     </footer>
 </body>
 
