--- a/pie.html
+++ b/pie.html
@@ -98,8 +98,8 @@
         <footer>
             <ul class=noneli>
 
-                <li><a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/pie.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
-                    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/pie.html"><img src="/resources/images/w3c-css.png" alt="Valid CSS"></a>
+                <li><a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/pie.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
+                    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/pie.html"><img src="w3c-css.png" alt="Valid CSS"></a>
 
                 </li>
                 <li>Copyright &copy; 2012 Granny's Pies |</li>
