--- a/signup.html
+++ b/signup.html
@@ -57,8 +57,8 @@
 
         <a href=""><img class="img" src="left.jpg" alt=arrow-left> Back to front page</a><br><br>
         
-        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/signup.html"><img src="/resources/images/w3c-html5.png" alt="Valid HTML5"></a>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/signup.html"><img src="/resources/images/w3c-css.png" alt="Valid CSS"></a>
+        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/signup.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/signup.html"><img src="w3c-css.png" alt="Valid CSS"></a>
     </footer>
 </body>
 
