--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="signup.html">lab6 - NurdLuv</a></li>
             <li><a href="click.html">lab7 - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
-            <li><a href="">lab8</a></li>
+            <li><a href="TimerExcercise.html">lab8</a></li>
             <li><a href="">lab9</a></li>
             <li><a href="">lab10</a></li>
             <li><a href="">Final Project</a></li>
