--- a/click.html
+++ b/click.html
@@ -9,14 +9,14 @@
     function gogogo() {
         alert("Yay, it works!");
     }
-    function somethingElse() {
-        if (5 > 2) {
-            alert("Bigger");
-        if (5 < 2) {
-            alert("Smaller");
-        }
-    }
-}
+//     function somethingElse() {
+//         if (5 > 2) {
+//             alert("Bigger");
+//         if (5 < 2) {
+//             alert("Smaller");
+//         }
+//     }
+// }
     </script>
 </head>
 <body>
