--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <li><a href="index.html">lab1 - Homepage</a></li>
             <li><a href="aboutme.html">lab2 - About me</a></li>
             <li><a href="pie.html">lab3 - Recipe</a></li>
-            <li><a href="tmnt.html">lab4 - Movie Review</a></li>
-            <li><a href="form.html">lab5 - Grades Exercise</a></li>
+            <li><a href="form.html">lab4 - Grades Exercise</a></li>
+            <li><a href="tmnt.html">lab5 - Movie Review</a></li>
             <li><a href="signup.html">lab6 - NurdLuv</a></li>
             <li><a href="click.html">lab7 - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
-            <li><a href="TimerExcercise.html">lab8 - TimerExcercise</a></li>
+            <li><a href="decoratemytext.html">lab8 - Decorate My Text</a></li>
             <li><a href="">lab9</a></li>
             <li><a href="">lab10</a></li>
             <li><a href="">Final Project</a></li>
