--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="click.html">lab7 - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
             <li><a href="decoratemytext.html">lab8 - Decorate My Text</a></li>
-            <li><a href="JavaScriptTimerExercises.html">lab9</a></li>
+            <li><a href="JavaScriptTimerExercises.html">lab9 - JavaScript Timer Exercises</a></li>
             <li><a href="">lab10</a></li>
             <li><a href="">Final Project</a></li>
         </ul>
