--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </h1>
 
         <ul>
-            <li><a href="index.html">lab1 - Homepage</a></li>
-            <li><a href="aboutme.html">lab2 - About me</a></li>
-            <li><a href="pie.html">lab3 - Recipe</a></li>
-            <li><a href="form.html">lab4 - Grades Exercise</a></li>
-            <li><a href="tmnt.html">lab5 - Movie Review</a></li>
-            <li><a href="signup.html">lab6 - NurdLuv</a></li>
-            <li><a href="click.html">lab7 - onClick Alert & JavaScript Exercises</a></li>
-            <li><a href="calculator.html">lab7 - Calculator Tip</a></li>
-            <li><a href="decoratemytext.html">lab8 - Decorate My Text</a></li>
-            <li><a href="JavaScriptTimerExercises.html">lab9 - JavaScript Timer Exercises</a></li>
-            <li><a href="">lab10</a></li>
+            <li><a href="index.html">lab1 Monday - Homepage</a></li>
+            <li><a href="aboutme.html">lab2 Tuesday- About me</a></li>
+            <li><a href="pie.html">lab2 Tuesday - Recipe</a></li>
+            <li><a href="tmnt.html">lab3 Wednesday- Movie Review</a></li>
+            <li><a href="form.html">lab4 Thursday  - Grades Exercise</a></li>
+            <li><a href="signup.html">lab4 Thursday - NurdLuv</a></li>
+            <li><a href="click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
+            <li><a href="calculator.html">lab5 Friday - Calculator Tip</a></li>
+            <li><a href="decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
+            <li><a href="JavaScriptTimerExercises.html">lab6 Saturday - JavaScript Timer Exercises</a></li>
+            <li><a href="">lab7 Monday - </a></li>
             <li><a href="">Final Project</a></li>
         </ul>
 
