--- a/ascii.html
+++ b/ascii.html
@@ -12,8 +12,33 @@
 <header>
     CS 472 ASCII Animation Viewer
 </header>
-<textarea rows="20" cols="80">
+<textarea rows="20" cols="80"></textarea>
+<span>
+    <fieldset>
+        <legend>Play Controls:</legend>
+        <button>Start</button>
+        <button>Stop</button>
+    </fieldset>
+    <fieldset>
+        <legend>Animation:</legend>
+        <select>
+            <option>Blank</option>
+        </select>
+    </fieldset>
+    <fieldset>
+        <legend>Size</legend>
+        <select>
+            <option>Meduim</option>
+        </select>
+    </fieldset>
+    <fieldset>
+        <legend>Speed</legend>
+        <input type="checkbox"> Turbo
+    </fieldset>
+</span><br>
+<a class="w3" href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
+        <a class="w33" href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-css.png" alt="Valid CSS"></a>
 
-</textarea>
+
 </body>
 </html>
