--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <li><a href="click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab5 Friday - Calculator Tip</a></li><br>
             <li><a href="decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
-            <li><a href="JavaScriptTimerExercises.html">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
+            <li><a href="Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
             <li><a href="ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
             <li><a href="ascii.html">lab8 Tuesday - Module and Closure Lab</a></li>
-            <li><a href="ascii.html">lab8 Tuesday - Scope Exercise</a></li><br>
+            <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
