--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
             <li><a href="Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
             <li><a href="ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
-            <li><a href="">lab8 Tuesday - Module and Closure Lab</a></li>
+            <li><a href="movies.css">lab8 Tuesday - Module and Closure Lab</a></li>
             <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
