--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
             <li><a href="decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
             <li><a href="Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
             <li><a href="ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
-            <li><a href="movies.css">lab8 Tuesday - Module and Closure Lab</a></li>
             <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
+            <li><a href="module.js">lab9 Wednesday - Module Exercises</a></li>
+            <li><a href="">lab10 Thursday - Module and Closure Lab</a></li>
+            
             <li><a href="">Final Project</a></li>
         </ul>
 
