--- a/calculator.html
+++ b/calculator.html
@@ -6,12 +6,12 @@
 	-->
 <script>
 function calcTip() {
-	//var subtotalElem = 
-	//var tipElem = 
-	var totalElem = document.getElementById('total');
-	//var subtotal = 
-	//var tip = 
-	var total = 100000;
+	let subtotalElem = parseInt(document.getElementById("subtotal").value);
+	let tipElem = parseInt(document.getElementById("tip").value);
+	let totalElem = document.getElementById('total');
+	// let subtotal = subtotalElem;
+	let tip = tipElem /100;
+	let total = subtotalElem * tip;
 	totalElem.innerHTML = '$' + total;
 }
 
@@ -25,7 +25,7 @@ function calcTip() {
 
 	<body>
 		<h1>
-			<img id="logo" src="http://mumstudents.org/cs472/2019-05-BL/Lectures/js10/calc.jpg" alt="calcTip" />
+			<img id="logo" src="/resources/images/calc.jpg" alt="calcTip" />
 			  Tip Calculator
 		</h1>
 
