--- a/calculator.html
+++ b/calculator.html
@@ -25,7 +25,7 @@ function calcTip() {
 
 	<body>
 		<h1>
-			<img id="logo" src="/resources/calc.jpg" alt="calcTip" />
+			<img id="logo" src="calc.jpg" alt="calcTip" />
 			  Tip Calculator
 		</h1>
 
