--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Homepage</title>
 
-<link rel="stylesheet" href="myCss.css">
-<link href="aboutme.html" rel="htmlPage">
+<head>
+    <title>Homepage</title>
+
+    <link rel="stylesheet" href="myCss.css">
+    <link href="aboutme.html" rel="htmlPage">
 </head>
 
 <body>
@@ -16,13 +17,12 @@
         <h1>
             Lidia Mekonnen, Mesfin
         </h1>
-       
         <ul>
             <li><a href="index.html">lab1 Monday - Homepage</a></li><br>
             <li><a href="aboutme.html">lab2 Tuesday- About me</a></li>
             <li><a href="pie.html">lab2 Tuesday - Recipe</a></li><br>
             <li><a href="tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
-            <li><a href="form.html">lab4 Thursday  - Grades Exercise</a></li>
+            <li><a href="form.html">lab4 Thursday - Grades Exercise</a></li>
             <li><a href="signup.html">lab4 Thursday - NurdLuv</a></li><br>
             <li><a href="click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator.html">lab5 Friday - Calculator Tip</a></li><br>
@@ -31,7 +31,7 @@
             <li><a href="ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
             <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
             <li><a href="module.js">lab9 Wednesday - Module Exercises</a></li><br>
-            <li><a href="">lab10 Thursday - Module and Closure Lab</a></li><br>
+            <li><a href="account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
@@ -43,8 +43,11 @@
         <Address>1000 N 4th St. Fairfield, IOWA, 52557 </Address>
         <address>Email: lmesfin@miu.edu</address>
 
-        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
-                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img src="w3c-css.png" alt="Valid CSS"></a>
+        <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img
+                src="w3c-html5.png" alt="Valid HTML5"></a>
+        <a
+            href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img
+                src="w3c-css.png" alt="Valid CSS"></a>
     </footer>
 </body>
 
