--- a/banking.html
+++ b/banking.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Font Awesome -->
     
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="style/css" href="css/style1.css">
     <title>Document</title>
@@ -50,6 +51,6 @@
 
 <!-- Material form login -->
 <script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-<script src="js/app.js" ></script>
+<script src="app.js" ></script>
 </body>
 </html>
