--- a/account.html
+++ b/account.html
@@ -13,9 +13,9 @@
         <input type="text" name="message" id="user_input"><br><br>
         <label for="acct">Type Of Account</label>
         <select id="acctype" class="custom-select" required>
-            <option selected value="checking">business</option>
-            <option value="saving">checking</option>
-            <option value="loan">saving</option>
+            <option selected value="business">business</option>
+            <option value="checking">checking</option>
+            <option value="saving">saving</option>
         </select><br><br>
         <label id="deposit"> Deposit:<input type="number" name="deposit" placeholder="1000"></label><br><br>
         <input id="submit" type="submit" value="Create new account"><br><br>
