--- a/account.html
+++ b/account.html
@@ -11,13 +11,13 @@
         <h1>Module and Closure Lab</h1>
         <label><b>Enter a Message</b></label>
         <input type="text" name="message" id="user_input"><br><br>
-        <label for="acct">Type Of Account</label>
+        <label for="acct"><b>Type Of Account</b></label>
         <select id="acctype" class="custom-select" required>
             <option selected value="business">business</option>
             <option value="checking">checking</option>
             <option value="saving">saving</option>
         </select><br><br>
-        <label id="deposit"> Deposit:<input type="number" name="deposit" placeholder="1000"></label><br><br>
+        <label id="deposit"><b>Deposit:</b> <input type="number" name="deposit" placeholder="1000"></label><br><br>
         <input id="submit" type="submit" value="Create new account"><br><br>
         
         <textarea id='display' cols="50" rows="10"></textarea><br><br>
