--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
             <li><a href="module.js">lab9 Wednesday - Module Exercises</a></li><br>
             <li><a href="account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
+            <li><a href="maze.html">lab11 Saturday - Mouse Maze</a></li>
+            <li><a href="jQueryQuiz.html">lab11 Saturday - jQuery Quiz</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
