--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
             <li><a href="maze.html">lab11 Saturday - Mouse Maze</a></li>
             <li><a href="jQueryQuiz.html">lab11 Saturday - jQuery Quiz</a></li><br>
+            <li><a href="Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
