--- a/account.html
+++ b/account.html
@@ -17,7 +17,8 @@
             <option value="checking">checking</option>
             <option value="saving">saving</option>
         </select><br><br>
-        <label id="deposit"><b>Deposit:</b> <input type="number" name="deposit" placeholder="1000"></label><br><br>
+        <label ><b>Deposit:</b> 
+            <input id="deposit" type="number" name="deposit" placeholder="1000"></label><br><br>
         <input id="submit" type="submit" value="Create new account"><br><br>
         <textarea id='display' cols="50" rows="10"></textarea><br><br>
        
