--- a/selu.html
+++ b/selu.html
@@ -10,9 +10,9 @@
      <script src="http://www.cs.washington.edu/education/courses/cse190m/12sp/homework/7/grading.js"
             type="text/javascript"></script>
 
-    <link href="/seluBirthday/selu.css" type="text/css" rel="stylesheet" />
+    <link href="selu.css" type="text/css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script src="/seluBirthday/selu.js" type="text/javascript"></script>
+    <script src="selu.js" type="text/javascript"></script>
 
 </head>
 
