--- a/selu.html
+++ b/selu.html
@@ -20,10 +20,10 @@
     <div class=body>
 <h1>🎂Happy Birthday Seluye myFR🎂</h1>
 
-<pre>
-    💞ኣብዛ ብርኽቲ መዓልቲ ብልጽቲ ህያብ ንዝሃበና እግዚአብሔር ይመስገን💞 
+
+    💞ኣብዛ ብርኽቲ መዓልቲ ብልጽቲ ህያብ ንዝሃበና እግዚአብሔር ይመስገን💞<br> 
     😇😇2ይ ቆሮ 9-15 ስለቲ ዘይንገር ውህበቱ ንአምላኽ ስብሓት ይኹኖ!!😇😇
-</pre>
+
 
 <div id="puzzlearea">
 
