--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <title>Homepage</title>
-
     <link rel="stylesheet" href="myCss.css">
-    <link href="aboutme.html" rel="htmlPage">
 </head>
 
 <body>
@@ -19,25 +17,25 @@
         </h1>
         <ul>
             <li><a href="index.html">lab1 Monday - Homepage</a></li><br>
-            <li><a href="aboutme.html">lab2 Tuesday- About me</a></li>
-            <li><a href="pie.html">lab2 Tuesday - Recipe</a></li><br>
-            <li><a href="tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
+            <li><a href="aboutme/aboutme.html">lab2 Tuesday- About me</a></li>
+            <li><a href="pie/pie.html">lab2 Tuesday - Recipe</a></li><br>
+            <li><a href="movie/tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
             <li><a href="form.html">lab4 Thursday - Grades Exercise</a></li>
-            <li><a href="signup.html">lab4 Thursday - NurdLuv</a></li><br>
-            <li><a href="click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
-            <li><a href="calculator.html">lab5 Friday - Calculator Tip</a></li><br>
-            <li><a href="decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
-            <li><a href="Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
-            <li><a href="ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
-            <li><a href="scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
-            <li><a href="module.js">lab9 Wednesday - Module Exercises</a></li><br>
-            <li><a href="account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
-            <li><a href="maze.html">lab11 Saturday - Mouse Maze</a></li>
-            <li><a href="jQueryQuiz.html">lab11 Saturday - jQuery Quiz 1</a></li><br>
-            <li><a href="Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
+            <li><a href="nurdLuv/signup.html">lab4 Thursday - NurdLuv</a></li><br>
+            <li><a href="exercise/click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
+            <li><a href="calculator/calculator.html">lab5 Friday - Calculator Tip</a></li><br>
+            <li><a href="decorateMyText/decoratemytext.html">lab6 Saturday - Decorate My Text</a></li>
+            <li><a href="exercise/Timer.js">lab6 Saturday - JavaScript Timer Exercises</a></li><br>
+            <li><a href="asci/ascii.html">lab7 Monday - ASCII Animation Viewer</a></li><br>
+            <li><a href="exercise/scopeExercises.js">lab8 Tuesday - Scope Exercise</a></li><br>
+            <li><a href="exercise/module.js">lab9 Wednesday - Module Exercises</a></li><br>
+            <li><a href="bank/account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
+            <li><a href="maze/maze.html">lab11 Saturday - Mouse Maze</a></li>
+            <li><a href="exercise/jQueryQuiz.html">lab11 Saturday - jQuery Quiz 1</a></li><br>
+            <li><a href="exercise/Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
             <li><a href="puzzle/fifteen.html">lab12 Monday - DOM and Events (15 Puzzle)</a></li><br>
-            <li><a href="quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
-            <li><a href="selu.html">selu</a></li><br>
+            <li><a href="exercise/quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
+            <li><a href="selu/selu.html">selu</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
