--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -45,8 +45,8 @@
         </div>
         
             <div>
-                <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
-                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="w3c-css.png" alt="Valid CSS"></a>
+                <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="../w3c-html5.png" alt="Valid HTML5"></a>
+                <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/aboutme.html"><img src="../w3c-css.png" alt="Valid CSS"></a>
                 <!-- <a href="http://mumstudents.org/jshint/referer"><img src="http://mumstudents.org/jshint/jshint-small.png" alt="Valid JS"></a> -->
               </div>
        
