--- a/asci/ascii.html
+++ b/asci/ascii.html
@@ -44,8 +44,8 @@
 			</fieldset>
 		</div>
 <div class="w3">
-	<a  href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
-	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-css.png" alt="Valid CSS"></a>
+	<a  href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="../w3c-html5.png" alt="Valid HTML5"></a>
+	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="../w3c-css.png" alt="Valid CSS"></a>
 
 </div>
 
