--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Lidia Mekonnen, Mesfin
         </h1>
         <ul>
-            <li><a href="index.html">lab1 Monday - Homepage</a></li><br>
+            <li><a href="selu/selu.html">lab1 Monday - Homepage</a></li><br>
             <li><a href="aboutme/aboutme.html">lab2 Tuesday- About me</a></li>
             <li><a href="pie/pie.html">lab2 Tuesday - Recipe</a></li><br>
             <li><a href="movie/tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
@@ -35,7 +35,6 @@
             <li><a href="exercise/Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
             <li><a href="puzzle/fifteen.html">lab12 Monday - DOM and Events (15 Puzzle)</a></li><br>
             <li><a href="exercise/quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
-            <li><a href="selu/selu.html">selu</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
