--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <li><a href="NodeJs/N2.js">lab14 Wednesday - N2 exercise</a></li><br>
             <li><a href="NodeJs/N3.js">lab14 Wednesday - N3 exercise</a></li><br>
             <li><a href="NodeJs/N4.js">lab14 Wednesday - N4 exercise</a></li><br>
+            <li><a href="NodeJs/Calculator/calculator.html">lab15 Thursday - Simple Calculator Lab</a></li><br>
+            <li><a href="NodeJs/node.html">lab14 Wednesday - N4 exercise</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
